# salvo-worker

./: .gitignore  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
.github/workflows/: rust-ci.yml
examples/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
examples/template/: Cargo.toml  check.sh  deploy.sh  wrangler.toml
examples/template/docs/: open-api.json
examples/template/src/: durable.rs  lib.rs  router.rs
examples/template/src/durable/: web_socket.rs  web_socket2.rs
examples/template/src/router/: affix_state.rs  basic_auth.rs  cache.rs  caching_headers.rs  catch_panic.rs  compression.rs  concurrency_limiter.rs  csrf.rs  flash_cookie.rs  flash_session.rs  logging.rs  open_api.rs  request_id.rs  session.rs  timeout.rs
salvo-core/: Cargo.toml
salvo-core/src/: catcher.rs  depot.rs  lib.rs  server.rs  service.rs
salvo-core/src/conn/: joined.rs
salvo-core/src/extract/: metadata.rs
salvo-core/src/fs/: mod.rs  named_file.rs
salvo-core/src/http/: form.rs  mod.rs  request.rs  response.rs
salvo-core/src/http/body/: channel.rs  req.rs
salvo-core/src/routing/: flow_ctrl.rs  router.rs
salvo-core/src/routing/filters/: mod.rs  others.rs
salvo-core/src/serde/: cow_value.rs  flat_value.rs  request.rs  vec_value.rs
salvo-core/src/test/: mod.rs
salvo-core/src/writing/: json.rs  redirect.rs  seek.rs  text.rs
salvo-worker/: Cargo.toml
salvo-worker/src/: catch.rs  durable.rs  handle.rs  lib.rs  open_api.rs  response.rs  service.rs
salvo-worker/src/common/: error.rs  header.rs  lark.rs  mod.rs  page.rs  random.rs  response.rs  time.rs
salvo-worker/src/common/data/: option.rs
salvo-worker/src/handlers/: elapsed.rs  mod.rs
salvo/cache/: Cargo.toml
salvo/cache/src/: lib.rs  moka_store.rs  worker_store.rs
salvo/compression/: Cargo.toml
salvo/compression/src/: encoder.rs  lib.rs
salvo/core/: Cargo.toml
salvo/core/src/: catcher.rs  depot.rs  handler.rs  lib.rs  rt.rs  server.rs  service.rs
salvo/core/src/conn/: mod.rs  proto.rs  tcp.rs
salvo/core/src/conn/stream/: straight.rs
salvo/core/src/fs/: mod.rs  named_file.rs
salvo/core/src/fuse/: flex.rs
salvo/core/src/http/: form.rs  mod.rs  request.rs  response.rs
salvo/core/src/http/body/: channel.rs  req.rs  res.rs
salvo/core/src/http/errors/: parse_error.rs  status_error.rs
salvo/core/src/routing/: mod.rs  path_params.rs  path_state.rs  router.rs
salvo/core/src/routing/filters/: others.rs  path.rs
salvo/core/src/serde/: mod.rs  request.rs
salvo/core/src/test/: mod.rs  response.rs
salvo/core/src/test/request/: builder.rs
salvo/core/src/writing/: mod.rs  redirect.rs  seek.rs  text.rs
salvo/cors/: Cargo.toml
salvo/cors/src/: allow_credentials.rs  allow_headers.rs  allow_methods.rs  allow_origin.rs  expose_headers.rs  lib.rs
salvo/csrf/: Cargo.toml
salvo/csrf/src/: aes_gcm_cipher.rs  ccp_cipher.rs  finder.rs  hmac_cipher.rs  lib.rs  session_store.rs
salvo/extra/: Cargo.toml
salvo/extra/src/: basic_auth.rs  caching_headers.rs  catch_panic.rs  force_https.rs  lib.rs  logging.rs  request_id.rs  size_limiter.rs  sse.rs  timeout.rs  tower_compat.rs  websocket.rs
salvo/flash/: Cargo.toml
salvo/flash/src/: lib.rs  session_store.rs
salvo/jwt-auth/: Cargo.toml
salvo/jwt-auth/src/: finder.rs  lib.rs
salvo/oapi/: Cargo.toml
salvo/oapi/docs/: derive_to_parameters.md  endpoint.md
salvo/oapi/src/: lib.rs  naming.rs  routing.rs
salvo/oapi/src/extract/parameter/: cookie.rs  header.rs  path.rs  query.rs
salvo/oapi/src/extract/payload/: file.rs
salvo/oapi/src/openapi/: mod.rs  request_body.rs
salvo/oapi/src/openapi/schema/: mod.rs
salvo/oapi/src/rapidoc/: mod.rs
salvo/oapi/src/redoc/: mod.rs
salvo/oapi/src/scalar/: mod.rs
salvo/oapi/src/swagger_ui/: config.rs  mod.rs
salvo/proxy/: Cargo.toml
salvo/proxy/src/: lib.rs  reqwest_client.rs
salvo/rate-limiter/: Cargo.toml
salvo/rate-limiter/src/: lib.rs  quota.rs  worker_store.rs
salvo/serve-static/: Cargo.toml
salvo/serve-static/src/: dir.rs  embed.rs  lib.rs
salvo/session/: Cargo.toml
salvo/session/src/: lib.rs
src/: lib.rs
