[package]
name = "salvo-worker"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
include = ["src", "Cargo.toml", "LICENSE", "README.md"]
description = ""
authors = ["Anubis"]
repository = "https://github.com/lazyanubis/salvo-worker"

# [lib]
# path = "src/lib.rs"
# crate-type = ["cdylib"]

[profile.release]
lto = true # 通过对整个程序进行分析，并以增加链接时间为代价，LTO 可以生成更加优化的代码。
# false: 只会对代码生成单元中的本地包进行 thin LTO 优化，若代码生成单元数为 1 或者 opt-level 为 0，则不会进行任何 LTO 优化
# true 或 fat：对依赖图中的所有包进行 fat LTO 优化
# thin：对依赖图的所有包进行 thin LTO，相比 fat 来说，它仅牺牲了一点性能，但是换来了链接时间的可观减少
# off： 禁用 LTO
opt-level = 3 # 优化级别
# 0: 无优化
# 1: 基本优化
# 2: 一些优化
# 3: 全部优化
# "s": 优化输出的二进制文件的大小
# "z": 优化二进制文件大小，但也会关闭循环向量化
codegen-units = 1 # 指定一个包会被分隔为多少个代码生成单元。更多的代码生成单元会提升代码的并行编译速度，但是可能会降低运行速度。

[features]
default = [
    # "full",
    #
]

full = []

[dependencies]
