[workspace]
members = ["salvo/*", "salvo-worker"]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"

[profile.release]
lto = true # 通过对整个程序进行分析，并以增加链接时间为代价，LTO 可以生成更加优化的代码。
# false: 只会对代码生成单元中的本地包进行 thin LTO 优化，若代码生成单元数为 1 或者 opt-level 为 0，则不会进行任何 LTO 优化
# true 或 fat：对依赖图中的所有包进行 fat LTO 优化
# thin：对依赖图的所有包进行 thin LTO，相比 fat 来说，它仅牺牲了一点性能，但是换来了链接时间的可观减少
# off： 禁用 LTO
opt-level = 3 # 优化级别
# 0: 无优化
# 1: 基本优化
# 2: 一些优化
# 3: 全部优化
# "s": 优化输出的二进制文件的大小
# "z": 优化二进制文件大小，但也会关闭循环向量化
codegen-units = 1 # 指定一个包会被分隔为多少个代码生成单元。更多的代码生成单元会提升代码的并行编译速度，但是可能会降低运行速度。

[workspace.lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"
missing_docs = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"

[workspace.lints.clippy]
future_not_send = "allow"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[workspace.dependencies]
salvo-core = { path = "salvo/core", default-features = false }
salvo-extra = { path = "salvo/extra", default-features = false }
salvo-cache = { path = "salvo/cache", default-features = false }
salvo-compression = { path = "salvo/compression", default-features = false }
salvo-cors = { path = "salvo/cors" }
salvo-session = { path = "salvo/session" }
salvo-csrf = { path = "salvo/csrf" }
salvo-flash = { path = "salvo/flash" }
salvo-jwt-auth = { path = "salvo/jwt-auth" }
salvo-oapi = { path = "salvo/oapi" }
salvo-proxy = { path = "salvo/proxy" }
salvo-rate-limiter = { path = "salvo/rate-limiter" }
salvo-serve-static = { path = "salvo/serve-static" }

hex = "0.4.3"
base64 = "0.22"
mime = "0.3"
path-slash = "0.2"
http = "1"
serde = "1"
serde_json = "1"
serde_norway = "0.9"
futures = "0.3"
bytes = "1"
etag = "4"
futures-util = { version = "0.3", default-features = false }
http-body-util = "0.1"
hyper = { version = "1", features = [
    "client",
    "http1",
    # "http2",
    "server",
] }
hyper-util = { version = "0.1", default-features = false }
hyper-rustls = { version = "0.27", default-features = false }
pin-project = "1"
tokio = { version = "1.44.2", default-features = false }
tokio-tungstenite = { version = "0.26", default-features = false }
tokio-util = { version = "0.7.14", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
tower = { version = "0.5", default-features = false }
tracing = "0.1"
tracing-test = "0.2.1"
ulid = { version = "1", default-features = false }
moka = "0.12"
time = "0.3"
sha2 = "0.10"
indexmap = "2"
# Compress
brotli = { version = "8", default-features = false }
flate2 = { version = "1", default-features = false }
zstd = { version = "0.13", default-features = false }
async-session = "3"
cookie = "0.18"
aead = "0.5.2"
aes-gcm = "0.10"
bcrypt = "0.17"
chacha20poly1305 = "0.10"
hmac = "0.12"
jsonwebtoken = "9"
thiserror = "2"
chrono = "0.4"
compact_str = { version = "0.9", features = ["serde"] }
inventory = "0.3"
mime-infer = "4"
parking_lot = "0.12"
regex = "1"
rust-embed = { version = ">= 6, <= 9" }
ring = "0.17"
rust_decimal = "1"
smallvec = "1"
url = "2"
uuid = "1"
nix = { version = "0.29", default-features = false }
rand = "0.9"
tempfile = "3"
assert-json-diff = "2"
fastrand = "2"
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "charset",
    "http2",
    "macos-system-configuration",
    "json",
    "blocking",
    "multipart",
    "stream",
] }
ciborium = "0.2"


worker = { version = "0.6" }
