[package]
name = "salvo-worker"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
readme = "README.md"
include = ["src", "Cargo.toml", "../LICENSE", "../README.md"]
description = "Write Cloudflare's Worker to provide Web services using the Salvo framework"
authors = ["Anubis"]
repository = "https://github.com/lazyanubis/salvo-worker"

# [lib]
# path = "src/lib.rs"
# crate-type = ["cdylib"]

[features]
default = []

# affix-state = ["salvo_extra/affix-state"] # 不同路由和处理器之间共享任何类型的数据

full = []

[dependencies]
salvo-core = { workspace = true }

# salvo_extra = { version = "0.78.0", optional = true }

http = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }

worker = { workspace = true, features = ["http"] }
