[package]
name = "salvo-worker"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
readme = "README.md"
include = ["src", "Cargo.toml", "../LICENSE", "../README.md"]
description = "Write Cloudflare's Worker to provide Web services using the Salvo framework"
authors = ["Anubis"]
repository = "https://github.com/lazyanubis/salvo-worker"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
# [package.metadata.wasm-pack.profile.release]
# wasm-opt = false

# [lib]
# crate-type = ["cdylib"]

[lints]
workspace = true

[features]
default = []

# ! 存疑，Cloudflare 里面的路由可能随时是新的，因此存在路由里面的数据可能会被重置
affix-state = ["salvo-extra/affix-state"] # 不同路由和处理器之间共享任何类型的数据
# ! 存疑，Cloudflare 里面的路由可能随时是新的，因此存在路由里面的数据可能会被重置
basic-auth = ["salvo-extra/basic-auth"] # 请求头中包含 Authorization 字段来传递用户名和密码

full = ["affix-state", "basic-auth"]

[dependencies]
salvo-core = { workspace = true }

salvo-extra = { workspace = true, default-features = false, optional = true, features = [
    "affix-state",
] }

http = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }

worker = { workspace = true, features = ["http"] }
