[package]
name = "template"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
# [package.metadata.wasm-pack.profile.release]
# wasm-opt = false

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
# 本地依赖
# salvo-worker = { workspace = true }

# 运行框架相关
console_error_panic_hook = { workspace = true }
worker = { workspace = true, features = ["http", "d1"] }
worker-macros = { workspace = true, features = ["http"] }
tokio = { workspace = true, default-features = false }

# 日志
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-web = { workspace = true }

# 工具
time = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
http = { workspace = true }
once_cell = { workspace = true }
lazy_static = { workspace = true }
futures = { workspace = true }
# getrandom = { workspace = true, features = ["wasm_js"] }
regex = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
ciborium = { workspace = true }

# 网络请求
# reqwest = { workspace = true }
