[package]
name = "salvo-core"
version.workspace = true
edition.workspace = true
license = "MIT"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
# [package.metadata.wasm-pack.profile.release]
# wasm-opt = false

# [lib]
# crate-type = ["cdylib"]

[lints]
workspace = true

[features]
default = [
    "cookie",
    "fix-http1-request-uri",
    "server",
    # "server-handle",
    "http1",
    # "http2",
    "test",
    "anyhow",
    "eyre",
    "ring",
    "matched-path",
]
full = [
    "cookie",
    "fix-http1-request-uri",
    "server",
    # # "server-handle", # too many tokio
    "http1",
    # # "http2",
    # # "http2-cleartext",
    # # "quinn",
    # # "rustls",
    # # "native-tls",
    # # "openssl",
    "unix",
    "test",
    # # "acme",
    "anyhow",
    "eyre",
    "ring",
    "matched-path",
    "socket2",
]
cookie = ["dep:cookie"]
fix-http1-request-uri = ["http1"]
server = []
server-handle = []
http1 = []
http2 = ["hyper/http2"]
http2-cleartext = ["http2"]
quinn = [
    # "dep:salvo-http3", "dep:quinn", "rustls"
]
rustls = [
    # "dep:tokio-rustls", "dep:rustls-pemfile", "ring"
]
native-tls = [
    # "dep:tokio-native-tls", "dep:native-tls"
]
openssl = [
    # "dep:openssl", "dep:tokio-openssl"
]
unix = ["http1"]
test = [
    "dep:brotli",
    "dep:flate2",
    # "dep:zstd",
    "dep:encoding_rs",
    "dep:serde_urlencoded",
    "dep:url",
    "tokio/macros",
]
acme = [
    # "http1",
    # "http2",
    # "hyper-util/http1",
    # "hyper-util/http2",
    # "hyper-util/client-legacy",
    # "dep:hyper-rustls",
    # "dep:rcgen",
    # "dep:ring",
    # "ring",
    # "dep:x509-parser",
    # "dep:tokio-rustls",
    # "dep:rustls-pemfile",
]
socket2 = ["dep:socket2"]
# aws-lc-rs = ["hyper-rustls?/aws-lc-rs", "tokio-rustls?/aws-lc-rs"]
ring = [
    # "hyper-rustls?/ring", "tokio-rustls?/ring"
]
matched-path = []


[dependencies]
salvo_macros = "0.78.0"

headers = "0.4"
http = { workspace = true }
hyper = { workspace = true, features = [
    "client",
    "http1",
    # "http2",
    "server",
] }
hyper-util = { workspace = true, default-features = true, features = [
    # "client",
    # "client-legacy",
    # "server",
    # "server-auto",
    # "server-graceful",
    # "service",
    # "http1",
    # "http2",
    # "tokio",
    # "tracing",
] }
mime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
serde_urlencoded = { version = "0.7", optional = true }
serde-xml-rs = "0.7"
thiserror = { workspace = true }
multer = "3"
mime-infer = "4"
regex = { workspace = true }
futures-util = { workspace = true, default-features = false }
form_urlencoded = "1"
percent-encoding = { workspace = true }
bytes = { workspace = true }
async-trait = "0.1"
tracing = "0.1"
tokio = { workspace = true, default-features = false }
tokio-util = { workspace = true, default-features = false, optional = true }
eyre = { version = "0.6", optional = true }
anyhow = { version = "1", optional = true }
enumflags2 = "0.7"
indexmap = { workspace = true }
multimap = { version = "0.10", features = ["serde"] }
parking_lot = { workspace = true }
futures-channel = "0.3"
sync_wrapper = "1"
http-body-util = { workspace = true }
base64 = { workspace = true }
tempfile = { workspace = true, optional = true }
cookie = { workspace = true, features = [
    "percent-encode",
    # "private",
    # "signed",
], optional = true }
encoding_rs = { version = "0.8", optional = true }
flate2 = { workspace = true, optional = true, features = ["default"] }
zstd = { workspace = true, optional = true, default-features = false, features = [
    "wasm",
] }
brotli = { workspace = true, optional = true, features = ["default"] }
url = { workspace = true, optional = true }
pin-project = { workspace = true }

worker = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hyper-util = { workspace = true, features = ["tokio"] }
tokio-util = { workspace = true, features = ["io"] }
zstd = { workspace = true, features = ["default"] }
rand = { workspace = true }
tempfile = { workspace = true }
socket2 = { version = "0.5", optional = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["fs", "user"] }
tokio = { workspace = true, features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
] }

[dev-dependencies]
fastrand = { workspace = true }
