[package]
name = "salvo-cors"
version.workspace = true
edition.workspace = true
license = "MIT"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
# [package.metadata.wasm-pack.profile.release]
# wasm-opt = false

# [lib]
# crate-type = ["cdylib"]

[lints]
workspace = true

[features]
needless = []

[dependencies]
salvo-core = { workspace = true, default-features = false }
bytes = { workspace = true }
tracing = { workspace = true }

worker = { workspace = true, optional = true }

[dev-dependencies]
