[package]
name = "salvo-jwt-auth"
version.workspace = true
edition.workspace = true
license = "MIT"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
# [package.metadata.wasm-pack.profile.release]
# wasm-opt = false

# [lib]
# crate-type = ["cdylib"]

[lints]
workspace = true

[features]
default = []
full = [
    # "oidc",
    #  "ring"
]
oidc = [
    "dep:bytes",
    # "hyper-rustls",
    "dep:hyper-util",
    "dep:http-body-util",
    "ring",
]
# aws-lc-rs = ["hyper-rustls?/aws-lc-rs"]
ring = [
    # "hyper-rustls?/ring"
]

[dependencies]
base64 = { workspace = true }
bytes = { workspace = true, optional = true }
jsonwebtoken = { workspace = true }
http-body-util = { workspace = true, optional = true }
hyper-rustls = { workspace = true, optional = true, features = [
    "native-tokio",
    "http1",
    # "tls12",
    "logging",
] }
hyper-util = { workspace = true, optional = true, features = [
    "client-legacy",
    "http1",
    # "http2",
    # "tokio",
] }
salvo-core = { workspace = true, features = ["cookie"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

[dev-dependencies]
time.workspace = true
