[package]
name = "salvo-oapi"
version.workspace = true
edition.workspace = true
license = "MIT"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
# [package.metadata.wasm-pack.profile.release]
# wasm-opt = false

# [lib]
# crate-type = ["cdylib"]

[lints]
workspace = true

[features]
default = []
full = [
    # "swagger-ui",
    # "scalar",
    # "rapidoc",
    # "redoc",
    # "chrono",
    # "decimal",
    # "url",
    # "ulid",
    # "uuid",
    # "time",
    # "smallvec",
    # "indexmap",
    # "yaml",
    # "non-strict-integers",
    # "compact_str",
]
swagger-ui = ["dep:rust-embed"]
scalar = []
rapidoc = []
redoc = []
chrono = ["salvo-oapi-macros/chrono", "dep:chrono"]
decimal = ["salvo-oapi-macros/decimal", "dep:rust_decimal"]
decimal-float = ["salvo-oapi-macros/decimal-float", "dep:rust_decimal"]
non-strict-integers = ["salvo-oapi-macros/non-strict-integers"]
url = ["salvo-oapi-macros/url", "dep:url"]
ulid = ["salvo-oapi-macros/ulid", "dep:ulid"]
uuid = ["salvo-oapi-macros/uuid", "dep:uuid"]
time = ["salvo-oapi-macros/time", "dep:time"]
smallvec = ["salvo-oapi-macros/smallvec", "dep:smallvec"]
indexmap = ["salvo-oapi-macros/indexmap"]
yaml = ["dep:serde_norway"]
preserve-order = ["preserve-path-order", "preserve-prop-order"]
preserve-path-order = []
preserve-prop-order = []
compact_str = ["salvo-oapi-macros/compact_str", "dep:compact_str"]

[dependencies]
salvo-core = { workspace = true, default-features = false, features = [
    "cookie",
] }
salvo-oapi-macros = { version = "0.78.0", default-features = false }
base64 = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
inventory = { workspace = true }
mime-infer = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
http = { workspace = true }

# Feature optional dependencies
chrono = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
rust-embed = { workspace = true, optional = true }
serde_norway = { workspace = true, optional = true }
smallvec = { workspace = true, optional = true }
time = { workspace = true, optional = true }
ulid = { workspace = true, optional = true }
url = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
compact_str = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

[dev-dependencies]
assert-json-diff = { workspace = true }
