[package]
name = "salvo-rate-limiter"
version.workspace = true
edition.workspace = true
license = "MIT"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
# [package.metadata.wasm-pack.profile.release]
# wasm-opt = false

# [lib]
# crate-type = ["cdylib"]

[lints]
workspace = true

[features]
default = ["worker-store", "fixed-guard", "sliding-guard"]
full = ["worker-store", "fixed-guard", "sliding-guard"]
moka-store = ["dep:moka"]
worker-store = []
fixed-guard = []
sliding-guard = []

[dependencies]
moka = { workspace = true, optional = true, features = ["future"] }
salvo-core = { workspace = true, default-features = false }
serde = { workspace = true }
time = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
tokio = { workspace = true }
ciborium = { workspace = true }

worker = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]


[dev-dependencies]
salvo-core = { workspace = true, features = ["test"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
