[package]
name = "salvo-session"
version.workspace = true
edition.workspace = true
license = "MIT"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
# [package.metadata.wasm-pack.profile.release]
# wasm-opt = false

# [lib]
# crate-type = ["cdylib"]

[lints]
workspace = true

[features]

[dependencies]
async-session = { workspace = true }
cookie = { workspace = true, features = ["percent-encode", "signed"] }
salvo-core = { workspace = true, features = ["cookie"] }
tracing = { workspace = true }
time = { workspace = true }

worker = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
